GLRendererCopier: Fix for erroneous green bars in CopyOutputResult.

A recent change (commit df9420cf9c60790a8af9298e3daf1817689cc8e7 [formerly 07fe0b6e0939a8aa223d8fb526a8040b39441858])
modified all RenderPass texture size allocations to be rounded-up in 64
pixel increments. This revealed problems in the GLRendererCopier impl,
which have been fixed by explicitly accounting for both flipped and non-
flipped source textures, and also ensuring that the GL scissor is
disabled during scaling draw operations.

Bug: 801007
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel
Change-Id: Ia8309d9d882da8f0c8c7acdd7ddfe7c4ea311f49
Reviewed-on: https://chromium-review.googlesource.com/861154
Commit-Queue: Yuri Wiitala <miu@chromium.org>
Reviewed-by: Xiangjun Zhang <xjz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#528793}
Former-commit-id: f5e97c7c18f90cefd0948e547e2e4253e411f5b5